[gd_scene load_steps=9 format=3 uid="uid://bbqjxxayowlft"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_tr2q6"]
[ext_resource type="TileSet" uid="uid://dyd4siua4n4bj" path="res://tile_set.tres" id="2_rksa5"]
[ext_resource type="PackedScene" uid="uid://cyr115xssb2in" path="res://Slime.tscn" id="4_jfy54"]
[ext_resource type="PackedScene" uid="uid://b86glwof054wu" path="res://goblin.tscn" id="5_jw2wa"]
[ext_resource type="Texture2D" uid="uid://c2cbvvysmfaid" path="res://assets/Wooden Board.png" id="6_ux0dt"]
[ext_resource type="FontFile" uid="uid://20gyl166ue3r" path="res://assets/kirifont/KiriFont.ttf" id="7_wyvh3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4l0x8"]
size = Vector2(52, 57)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0xn0s"]
load_path = "res://.godot/imported/Wooden Board.png-28f920663fef330cd08a1b3441fd9511.ctex"

[node name="level_1" type="Node2D"]
script = ExtResource("1_tr2q6")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("2_rksa5")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 65538, 3, 65538, 196610, 0, 65539, 196610, 0, 65540, 196610, 0, 65541, 196610, 0, 65542, 196610, 0, 65543, 196610, 0, 65544, 196610, 0, 65545, 196610, 0, 65546, 196610, 0, 65547, 2, 0, 131073, 65538, 0, 196609, 65538, 0, 262145, 65538, 0, 327681, 655362, 1, 393217, 655362, 2, 458753, 655362, 3, 524289, 65538, 0, 589825, 65538, 0, 131083, 196610, 2, 196619, 196610, 2, 589835, 196610, 2, 524299, 196610, 1, 262155, 131074, 0, 262156, 196610, 0, 262157, 196610, 0, 262158, 196610, 0, 262159, 196610, 0, 262160, 196610, 0, 262161, 196610, 0, 196626, 196610, 1, 131091, 196610, 1, 65556, 196610, 1, 21, 196610, 1, 458771, 196610, 1, 524300, 65538, 2, 524301, 65538, 2, 524302, 65538, 2, 524303, 65538, 2, 524304, 65538, 2, 524305, 65538, 2, 524306, 65538, 2, 524307, 196610, 3, 393236, 196610, 1, 327701, 196610, 1, 262166, 196610, 1, 262162, 65538, 1, 458772, 65538, 1, 393237, 65538, 1, 327702, 65538, 1, 196627, 65538, 1, 131092, 65538, 1, 65557, 65538, 1, 22, 65538, 2, 23, 65538, 2, 24, 65538, 2, 25, 131074, 2, 262167, 65538, 2, 262168, 131074, 2, 327705, 131074, 2, 393242, 131074, 2, 458779, 131074, 2, 524316, 131074, 2, 589853, 131074, 2, 655390, 131074, 2, 720927, 131074, 2, 327704, 131074, 0, 393241, 131074, 0, 458778, 131074, 0, 524315, 131074, 0, 589852, 131074, 0, 655389, 131074, 0, 720926, 131074, 0, 786463, 65538, 0, 65562, 131074, 2, 131099, 131074, 2, 196636, 131074, 2, 262173, 131074, 2, 327710, 131074, 2, 393247, 131074, 2, 458784, 131074, 2, 524321, 131074, 2, 65561, 131074, 0, 131098, 131074, 0, 196635, 131074, 0, 262172, 131074, 0, 327709, 131074, 0, 393246, 131074, 0, 458783, 131074, 0, 524320, 131074, 0, 589857, 131074, 0, 851999, 65538, 0, 917535, 65538, 0, 983071, 65538, 0, 1048607, 65538, 0, 1114143, 65538, 1, 589858, 2, 0, 655394, 196610, 2, 720930, 196610, 2, 786466, 196610, 2, 852002, 196610, 2, 917538, 196610, 2, 983074, 196610, 2, 1048610, 196610, 2, 1114146, 196610, 2, 720897, 2, 2, 720898, 65538, 2, 720899, 65538, 2, 720900, 65538, 2, 720901, 65538, 2, 720902, 65538, 2, 720903, 65538, 2, 720904, 65538, 2, 720905, 65538, 2, 720906, 65538, 2, 720907, 196610, 3, 655361, 65538, 0, 655371, 196610, 2, 720919, 65538, 2, 983063, 131074, 2, 1048599, 131074, 0, 720920, 131074, 2, 786456, 131074, 0, 1048600, 131074, 2, 1114136, 131074, 0, 786457, 131074, 2, 851993, 131074, 0, 1114137, 131074, 2, 1179673, 131074, 0, 851994, 131074, 2, 917530, 131074, 0, 1179674, 131074, 2, 1245210, 131074, 0, 917531, 131074, 2, 983067, 131074, 0, 1245211, 131074, 2, 983068, 131074, 2, 1048604, 131074, 0, 1048605, 131074, 2, 1114141, 131074, 0, 1114142, 196610, 0, 1179682, 196610, 2, 1245218, 196610, 2, 1310754, 196610, 2, 1376290, 196610, 3, 1376289, 65538, 2, 1376287, 65538, 2, 1376288, 65538, 2, 1376286, 65538, 2, 1376285, 65538, 2, 1376284, 65538, 2, 1376283, 2, 2, 1310747, 65538, 0, 917521, 196610, 1, 983057, 65538, 1, 851986, 196610, 1, 917522, 65538, 1, 1179666, 196610, 1, 1245202, 196610, 3, 786451, 196610, 1, 851987, 65538, 1, 1114131, 196610, 1, 1179667, 65538, 1, 720916, 196610, 1, 786452, 65538, 1, 1048596, 196610, 1, 1114132, 65538, 1, 720917, 65538, 2, 983061, 196610, 1, 1048597, 65538, 1, 720918, 65538, 2, 983062, 65538, 2, 393218, 524288, 5, 393219, 589824, 6, 393220, 589824, 6, 393221, 589824, 6, 393222, 589824, 6, 393223, 589824, 6, 393224, 589824, 6, 393225, 589824, 6, 393226, 786432, 5, 393227, 589824, 6, 393228, 786432, 5, 393229, 589824, 6, 393230, 589824, 6, 393231, 786432, 5, 393232, 589824, 6, 393233, 589824, 6, 327698, 655360, 4, 327699, 327680, 5, 262164, 327680, 5, 262165, 720896, 7, 196629, 327680, 5, 196630, 589824, 7, 131094, 327680, 5, 131095, 589824, 6, 131096, 589824, 6, 131097, 720896, 0, 196633, 589824, 6, 196634, 720896, 4, 262170, 589824, 6, 262171, 720896, 4, 327707, 786432, 5, 393243, 524288, 7, 393244, 589824, 6, 458780, 524288, 7, 458781, 786432, 5, 458782, 720896, 4, 524318, 589824, 6, 524319, 720896, 4, 589855, 589824, 6, 589856, 720896, 4, 655392, 327680, 6, 655393, 720896, 4, 720929, 720896, 2, 786465, 720896, 2, 852001, 720896, 6, 917537, 720896, 6, 983073, 720896, 6, 1048609, 720896, 6, 1114145, 720896, 6, 1179681, 720896, 6, 1179680, 327680, 5, 1245216, 786432, 5, 1310752, 589824, 7, 1310751, 589824, 7, 1310750, 589824, 7, 1245214, 589824, 6, 1245213, 589824, 6, 1179677, 655360, 4, 1179676, 393216, 5, 1179675, 524288, 7, 1114139, 327680, 6, 1114138, 524288, 7, 1048602, 393216, 5, 1048601, 524288, 7, 983065, 393216, 5, 983064, 524288, 7, 917528, 327680, 6, 917527, 589824, 7, 917526, 589824, 7, 917525, 589824, 7, 917524, 393216, 6, 917523, 524288, 4, 983059, 786432, 5, 983058, 524288, 4, 1048594, 589824, 6, 1114130, 720896, 7, 1048595, 720896, 7, 983060, 720896, 7, 1310753, 720896, 7, 1245217, 720896, 6, 393245, 720896, 0, 327708, 720896, 4, 65560, 720896, 4, 65559, 655360, 4, 65558, 524288, 4, 131093, 524288, 4, 196628, 524288, 4, 262163, 524288, 4, 327696, 655360, 4, 327697, 655360, 4, 327695, 655360, 4, 327694, 655360, 4, 327693, 655360, 4, 327692, 655360, 4, 327691, 655360, 4, 131082, 720896, 4, 196618, 720896, 6, 262154, 720896, 6, 327690, 393216, 5, 131081, 655360, 4, 131080, 655360, 4, 131079, 655360, 4, 131078, 655360, 4, 131077, 655360, 4, 131076, 655360, 4, 131075, 655360, 4, 131074, 524288, 4, 196610, 524288, 5, 262146, 524288, 5, 327682, 524288, 5, 458754, 524288, 5, 524290, 524288, 5, 589826, 524288, 5, 655362, 524288, 7, 327688, 589824, 6, 262151, 589824, 6, 327685, 589824, 6, 1114144, 524288, 5, 1048608, 524288, 5, 917536, 524288, 5, 852000, 524288, 5, 786464, 524288, 5, 720928, 524288, 5, 983072, 524288, 5, 655391, 524288, 7, 589854, 524288, 7, 524317, 524288, 7, 327706, 524288, 7, 262169, 524288, 7, 196632, 589824, 7, 196631, 589824, 7, 327700, 720896, 7, 393235, 720896, 7, 458770, 720896, 7, 393234, 589824, 6, 458769, 589824, 7, 458768, 589824, 7, 458767, 589824, 7, 458766, 589824, 7, 458765, 589824, 7, 458764, 589824, 7, 458763, 589824, 7, 655370, 720896, 7, 589834, 720896, 6, 524298, 720896, 6, 458762, 393216, 6, 458761, 589824, 6, 524297, 589824, 6, 589833, 589824, 6, 589832, 589824, 6, 589831, 589824, 6, 589830, 589824, 6, 589829, 589824, 6, 589828, 589824, 6, 589827, 589824, 6, 524291, 786432, 5, 458755, 589824, 6, 458756, 786432, 5, 458757, 589824, 6, 524293, 786432, 5, 524292, 589824, 6, 524294, 589824, 6, 524295, 589824, 6, 524296, 589824, 6, 458759, 589824, 6, 458758, 786432, 5, 458760, 589824, 6, 327689, 589824, 6, 262152, 589824, 6, 262153, 589824, 6, 196617, 589824, 6, 196616, 589824, 6, 196615, 589824, 6, 262150, 589824, 6, 262149, 589824, 6, 196613, 589824, 6, 196612, 589824, 6, 196614, 589824, 6, 196611, 589824, 6, 262147, 786432, 5, 327683, 589824, 6, 327684, 786432, 5, 262148, 589824, 6, 327686, 589824, 6, 327687, 589824, 6, 655363, 589824, 7, 655364, 589824, 7, 655365, 589824, 7, 655366, 589824, 7, 655367, 589824, 7, 655368, 589824, 7, 655369, 589824, 7, 1310749, 589824, 7, 1310748, 524288, 7, 1179679, 655360, 4, 1179678, 655360, 4, 1245212, 524288, 5, 1245215, 786432, 5, 1114140, 720896, 4, 1048603, 720896, 4, 983066, 720896, 4, 917529, 720896, 4, 851992, 720896, 4, 786455, 720896, 4, 786454, 655360, 4, 786453, 524288, 4, 851988, 524288, 4, 851989, 327680, 5, 851990, 786432, 5, 851991, 393216, 5, 983056, 393218, 0, 983055, 393218, 0, 983054, 393218, 0, 983053, 393218, 0, 983052, 393218, 0, 983051, 393218, 0, 983050, 393218, 0, 983049, 393218, 0, 1245201, 196610, 1, 1310737, 196610, 2, 1376273, 196610, 3, 1376272, 65538, 2, 1376271, 65538, 2, 1376270, 65538, 2, 1376269, 65538, 2, 1376268, 65538, 2, 1376267, 65538, 2, 1376266, 65538, 2, 1376265, 65538, 2, 1376264, 2, 2, 1310728, 65538, 0, 1245192, 65538, 0, 1179656, 655362, 2, 1114120, 65538, 0, 1048584, 65538, 0, 983048, 65538, 3, 1048593, 655360, 4, 1048592, 655360, 4, 1048591, 655360, 4, 1048590, 655360, 4, 1048589, 655360, 4, 1048588, 655360, 4, 1048587, 655360, 4, 1048586, 655360, 4, 1048585, 524288, 4, 1114121, 524288, 5, 1179657, 524288, 5, 1245193, 524288, 5, 1310729, 524288, 7, 1310730, 589824, 7, 1310731, 589824, 7, 1310732, 589824, 7, 1310733, 589824, 7, 1310734, 589824, 7, 1310735, 589824, 7, 1310736, 720896, 7, 1245200, 720896, 6, 1179665, 720896, 7, 1179664, 393216, 6, 1114129, 393216, 6, 1114128, 589824, 6, 1114127, 589824, 6, 1114126, 589824, 6, 1114125, 589824, 6, 1114124, 589824, 6, 1114123, 589824, 6, 1114122, 589824, 6, 1179658, 589824, 6, 1245194, 589824, 6, 1245195, 589824, 6, 1245196, 589824, 6, 1179660, 589824, 6, 1179661, 589824, 6, 1245197, 589824, 6, 1179659, 589824, 6, 1179662, 589824, 6, 1245198, 589824, 6, 1245199, 589824, 6, 1179663, 589824, 6, 1441800, 196610, 10, 1441801, 196610, 10, 1441802, 196610, 10, 1441803, 196610, 10, 1441804, 196610, 10, 1441805, 196610, 10, 1441806, 196610, 10, 1441807, 196610, 10, 1441808, 196610, 10, 1441809, 196610, 10, 1441799, 131074, 10, 1376263, 196610, 12, 1310727, 196610, 12, 1245191, 196610, 12, 1179655, 196610, 12, 1114119, 196610, 12, 1048583, 196610, 12, 983047, 196610, 12, 917511, 196610, 11, 917512, 65538, 12, 917513, 65538, 12, 917514, 65538, 12, 917515, 65538, 12, 917516, 65538, 12, 917517, 65538, 12, 917518, 65538, 12, 917519, 65538, 12, 917520, 196610, 13, 851985, 196610, 13, 851984, 196610, 11, 786450, 196610, 13, 786449, 196610, 11, 720914, 196610, 11, 720915, 196610, 13, 655380, 65538, 12, 655379, 196610, 11, 655381, 65538, 12, 655382, 65538, 12, 655383, 65538, 12, 655384, 65538, 12, 655385, 131074, 12, 720921, 2, 12, 720922, 131074, 12, 786458, 2, 12, 786459, 131074, 12, 851995, 2, 12, 851996, 131074, 12, 917532, 2, 12, 917533, 131074, 12, 983069, 2, 12, 1048606, 2, 13, 983070, 196610, 13, 917534, 196610, 12, 851998, 196610, 12, 786462, 131074, 12, 786461, 2, 12, 720925, 131074, 12, 720924, 2, 12, 655388, 131074, 12, 655387, 2, 12, 589851, 131074, 12, 589850, 2, 12, 524314, 131074, 12, 524313, 2, 12, 458777, 131074, 12, 458776, 2, 12, 393240, 131074, 12, 393239, 65538, 12, 327703, 2, 13, 393238, 196610, 11, 458774, 196610, 13, 458773, 196610, 11, 524309, 196610, 13, 524308, 196610, 11, 589844, 196610, 13, 589843, 65538, 12, 589842, 65538, 12, 589841, 65538, 12, 589840, 65538, 12, 589839, 65538, 12, 589838, 65538, 12, 589837, 65538, 12, 589836, 65538, 13, 655372, 65538, 10, 720908, 65538, 10, 786444, 65538, 11, 786443, 196610, 10, 786442, 196610, 10, 786441, 196610, 10, 786440, 196610, 10, 786439, 196610, 10, 786438, 196610, 10, 786437, 196610, 10, 786436, 196610, 10, 786435, 196610, 10, 786434, 196610, 10, 786433, 196610, 10, 786432, 131074, 10, 720896, 196610, 12, 655360, 196610, 12, 589824, 196610, 12, 524288, 196610, 12, 458752, 196610, 12, 393216, 196610, 12, 327680, 196610, 12, 262144, 196610, 12, 196608, 196610, 12, 131072, 196610, 12, 65536, 196610, 12, 0, 196610, 11, 1, 65538, 12, 2, 65538, 12, 3, 65538, 12, 4, 65538, 12, 5, 65538, 12, 6, 65538, 12, 7, 65538, 12, 8, 65538, 12, 9, 65538, 12, 10, 65538, 12, 11, 65538, 12, 12, 131074, 12, 65548, 65538, 10, 131084, 65538, 10, 196620, 2, 12, 196621, 65538, 12, 196622, 65538, 12, 196623, 65538, 12, 196624, 65538, 12, 196625, 196610, 13, 131089, 196610, 11, 131090, 196610, 13, 65554, 196610, 11, 65555, 196610, 13, 19, 196610, 11, 20, 196610, 13, -65516, 196610, 11, -65515, 65538, 12, -65514, 65538, 12, -65513, 65538, 12, -65512, 65538, 12, -65511, 65538, 12, -65510, 131074, 12, 26, 2, 12, 27, 131074, 12, 65563, 2, 12, 65564, 131074, 12, 131100, 2, 12, 131101, 131074, 12, 196637, 2, 12, 262174, 2, 12, 196638, 131074, 12, 262175, 131074, 12, 327711, 2, 12, 327712, 131074, 12, 393248, 2, 12, 393249, 131074, 12, 458785, 2, 12, 458786, 131074, 12, 524322, 2, 12, 524323, 131074, 12, 589859, 65538, 10, 655395, 65538, 10, 720931, 65538, 10, 786467, 65538, 10, 852003, 65538, 10, 917539, 65538, 10, 983075, 65538, 10, 1048611, 65538, 10, 1114147, 65538, 10, 1179683, 65538, 10, 1245219, 65538, 10, 1310755, 65538, 10, 1376291, 65538, 10, 1441827, 65538, 11, 1441826, 196610, 10, 1441825, 196610, 10, 1441824, 196610, 10, 1441823, 196610, 10, 1441822, 196610, 10, 1441821, 196610, 10, 1441820, 196610, 10, 1441819, 196610, 10, 1441818, 131074, 10, 1376282, 196610, 12, 1310746, 2, 10, 1310745, 131074, 10, 1245209, 2, 10, 1245208, 131074, 10, 1179672, 2, 10, 1179671, 131074, 10, 1114135, 2, 10, 1048598, 2, 13, 1114134, 196610, 10, 1114133, 65538, 13, 1179669, 65538, 11, 1179668, 65538, 13, 1245204, 65538, 11, 1245203, 65538, 13, 1310739, 65538, 11, 1310738, 65538, 13, 1376274, 65538, 10, 1441810, 65538, 11, -65523, 2, 13, 13, 2, 13, 65549, 2, 13, 131085, 2, 13, 131086, 2, 13, 131087, 2, 13, 131088, 2, 13, 65552, 2, 13, 65553, 2, 13, 17, 2, 13, 18, 2, 13, -65518, 2, 13, -65517, 2, 1610612749, -131053, 2, 1610612749, -131052, 2, 1610612749, -131051, 2, 1610612749, -131050, 2, 1610612749, -131049, 2, 1610612749, -131048, 2, 1610612749, -131047, 2, 1610612749, -131046, 2, 1610612749, -131045, 2, 13, -65509, 2, 1610612749, -65508, 2, 1610612749, 28, 2, 1610612749, 29, 2, 1610612749, 65565, 2, 1610612749, 65566, 2, 1610612749, 131102, 2, 1610612749, 131103, 2, 13, 196639, 2, 1610612749, 196640, 2, 13, 262176, 2, 1610612749, 262177, 2, 13, 327713, 2, 13, 327714, 2, 13, 393250, 2, 1610612749, 393251, 2, 1610612749, 458787, 2, 1610612749, 458788, 2, 1610612749, 524324, 2, 1610612749, 589860, 2, 1610612749, 655396, 2, 1610612749, 720932, 2, 1610612749, 786468, 2, 1610612749, 852004, 2, 1610612749, 917540, 2, 1610612749, 983076, 2, 1610612749, 1048612, 2, 1610612749, 1114148, 2, 1610612749, 1179684, 2, 1610612749, 1245220, 2, 1610612749, 1310756, 2, 1610612749, 1376292, 2, 1610612749, 1441828, 2, 1610612749, 1507364, 2, 1610612749, 1507363, 2, 1610612749, 1507362, 2, 1610612749, 1507361, 2, 1610612749, 1507360, 2, 1610612749, 1507359, 2, 1610612749, 1507358, 2, 1610612749, 1507357, 2, 1610612749, 1507356, 2, 1610612749, 1507355, 2, 1610612749, 1507354, 2, 1610612749, 1507353, 2, 13, 1441817, 2, 1610612749, 1376281, 2, 1610612749, 1376280, 2, 1610612749, 1310744, 2, 1610612749, 1310743, 2, 1610612749, 1245207, 2, 1610612749, 1245206, 2, 1610612749, 1179670, 2, 1610612749, 1245205, 2, 1610612749, 1310741, 2, 1610612749, 1310740, 2, 1610612749, 1376276, 2, 1610612749, 1376275, 2, 1610612749, 1441811, 2, 13, 1507347, 2, 1610612749, 1507346, 2, 1610612749, 1507345, 2, 1610612749, 1507344, 2, 1610612749, 1507343, 2, 1610612749, 1507342, 2, 1610612749, 1507341, 2, 1610612749, 1507340, 2, 1610612749, 1507339, 2, 1610612749, 1507338, 2, 1610612749, 1507337, 2, 1610612749, 1507336, 2, 1610612749, 1507335, 2, 1610612749, 1507334, 2, 1610612749, 1179654, 2, 13, 1245190, 2, 1610612749, 1310726, 2, 1610612749, 1376262, 2, 13, 1441798, 2, 13, 851974, 2, 1610612749, 917510, 2, 1610612749, 983046, 2, 13, 1048582, 2, 13, 1114118, 2, 13, 655373, 2, 1610612749, 720909, 2, 1610612749, 786445, 2, 1610612749, 851981, 2, 1610612749, 851975, 2, 1610612749, 851976, 2, 1610612749, 851977, 2, 1610612749, 851978, 2, 1610612749, 851979, 2, 1610612749, 851980, 2, 1610612749, 655374, 2, 1610612749, 655375, 2, 1610612749, 655376, 2, 1610612749, 655377, 2, 1610612749, 655378, 2, 1610612749, 589845, 2, 1610612749, 589846, 2, 1610612749, 524310, 2, 1610612749, 524311, 2, 1610612749, 458775, 2, 1610612749, 589847, 2, 1610612749, 589848, 2, 1610612749, 524312, 2, 1610612749, 589849, 2, 1610612749, 655386, 2, 1610612749, 720923, 2, 1610612749, 786460, 2, 1610612749, 851997, 2, 1610612749, 720913, 2, 1610612749, 720912, 2, 1610612749, 786448, 2, 1610612749, 786447, 2, 1610612749, 851983, 2, 1610612749, 851982, 2, 1610612749, 786446, 2, 1610612749, 720910, 2, 1610612749, 720911, 2, 1610612749, 851973, 2, 1610612749, 851972, 2, 1610612749, 851971, 2, 1610612749, 851970, 2, 1610612749, 851969, 2, 1610612749, 851968, 2, 1610612749, 917503, 2, 13, 851967, 2, 1610612749, 786431, 2, 1610612749, 720895, 2, 1610612749, 327679, 2, 1610612749, 393215, 2, 1610612749, 458751, 2, 1610612749, 524287, 2, 1610612749, 589823, 2, 1610612749, 655359, 2, 1610612749, -1, 2, 1610612749, 65535, 2, 1610612749, 131071, 2, 1610612749, 196607, 2, 1610612749, 262143, 2, 1610612749, -65536, 2, 1610612749, -65535, 2, 1610612749, -65534, 2, 1610612749, -65533, 2, 1610612749, -65532, 2, 1610612749, -65531, 2, 1610612749, -65530, 2, 1610612749, -65529, 2, 1610612749, -65528, 2, 1610612749, -65527, 2, 1610612749, -65526, 2, 1610612749, -65525, 2, 1610612749, -65524, 2, 1610612749, 14, 2, 13, -65522, 2, 13, -65521, 2, 13, -65520, 2, 13, -65519, 2, 13, -131055, 2, 13, -131054, 2, 13, 16, 2, 13, 15, 2, 13, 65551, 2, 13, 65550, 2, 13, -131056, 2, 13, -131057, 2, 13, -131058, 2, 13, -131059, 2, 13, -131060, 2, 13, -131061, 2, 13, -131062, 2, 13, -131063, 2, 13, -131064, 2, 13, -131065, 2, 13, -131066, 2, 13, -131067, 2, 13, -131068, 2, 13, -131069, 2, 13, -131070, 2, 13, -131071, 2, 13, -131072, 2, 13, -65537, 2, 13, 393252, 2, 13, 327716, 2, 13, 262180, 2, 13, 196644, 2, 13, 196643, 2, 13, 131107, 2, 13, 65571, 2, 13, 35, 2, 13, -65501, 2, 13, -131037, 2, 13, -131036, 2, 13, -65500, 2, 13, 36, 2, 13, 65572, 2, 13, 131108, 2, 13, -131038, 2, 13, -131039, 2, 13, -131040, 2, 13, -131041, 2, 13, -131042, 2, 13, -131043, 2, 13, -131044, 2, 13, -65506, 2, 13, -65507, 2, 13, 30, 2, 13, 31, 2, 13, 32, 2, 13, 65568, 2, 13, 65569, 2, 13, 131104, 2, 13, 196641, 2, 13, 131105, 2, 13, 65567, 2, 13, 327715, 2, 13, 262178, 2, 13, 196642, 2, 13, 131106, 2, 13, 262179, 2, 13, 65570, 2, 13, 34, 2, 13, 33, 2, 13, -65503, 2, 13, -65504, 2, 13, -65502, 2, 13, -65505, 2, 13, 1441812, 2, 13, 1441813, 2, 13, 1441814, 2, 13, 1441815, 2, 13, 1441816, 2, 13, 1507352, 2, 13, 1507351, 2, 13, 1507350, 2, 13, 1507349, 2, 13, 1507348, 2, 13, 1376277, 2, 13, 1376278, 2, 13, 1310742, 2, 13, 1376279, 2, 13, 983039, 2, 13, 1048575, 2, 13, 1114111, 2, 13, 1179647, 2, 13, 1245183, 2, 13, 1179648, 2, 13, 1245184, 2, 13, 1310720, 2, 13, 1376256, 2, 13, 1441791, 2, 13, 1376255, 2, 13, 1310719, 2, 13, 1376257, 2, 13, 1376258, 2, 13, 1376259, 2, 13, 1376260, 2, 13, 1376261, 2, 13, 1507333, 2, 13, 1507332, 2, 13, 1507331, 2, 13, 1507330, 2, 13, 1507329, 2, 13, 1507328, 2, 13, 1572863, 2, 13, 1507327, 2, 13, 1441792, 2, 13, 1441793, 2, 13, 1441794, 2, 13, 1441795, 2, 13, 1441796, 2, 13, 1441797, 2, 13, 1310725, 2, 13, 1245189, 2, 13, 1310724, 2, 13, 1310723, 2, 13, 1310722, 2, 13, 1310721, 2, 13, 1245185, 2, 13, 1245186, 2, 13, 1245187, 2, 13, 1179651, 2, 13, 1179652, 2, 13, 1179653, 2, 13, 1245188, 2, 13, 1114116, 2, 13, 1114117, 2, 13, 1048581, 2, 13, 983045, 2, 13, 983044, 2, 13, 983043, 2, 13, 983042, 2, 13, 1048578, 2, 13, 1048577, 2, 13, 1114113, 2, 13, 1114112, 2, 13, 1048579, 2, 13, 1114115, 2, 13, 1048580, 2, 13, 1179650, 2, 13, 1114114, 2, 13, 1179649, 2, 13, 917509, 2, 13, 917508, 2, 13, 917507, 2, 13, 983041, 2, 13, 983040, 2, 13, 917504, 2, 13, 917505, 2, 13, 917506, 2, 13, 1048576, 2, 13, 1507365, 2, 13, 1507366, 2, 13, 1507367, 2, 13, 1441831, 2, 13, 1376295, 2, 13, 1310759, 2, 13, 1245223, 2, 13, 1114150, 2, 13, 1179686, 2, 13, 1245222, 2, 13, 1310758, 2, 13, 1376294, 2, 13, 1048614, 2, 13, 1114149, 2, 13, 1179685, 2, 13, 1245221, 2, 13, 1310757, 2, 13, 1376293, 2, 13, 1441829, 2, 13, 1441830, 2, 13, 786471, 2, 13, 852007, 2, 13, 917543, 2, 13, 983079, 2, 13, 1179687, 2, 13, 1114151, 2, 13, 1048615, 2, 13, 917542, 2, 13, 983078, 2, 13, 852005, 2, 13, 786469, 2, 13, 720933, 2, 13, 917541, 2, 13, 983077, 2, 13, 1048613, 2, 13, 786470, 2, 13, 262183, 2, 13, 327719, 2, 13, 393255, 2, 13, 458791, 2, 13, 524327, 2, 13, 589863, 2, 13, 655399, 2, 13, 720935, 2, 13, 720934, 2, 13, 655398, 2, 13, 589862, 2, 13, 852006, 2, 13, 524326, 2, 13, 458790, 2, 13, 393254, 2, 13, 655397, 2, 13, 589861, 2, 13, 524325, 2, 13, 458789, 2, 13, 393253, 2, 13, 327717, 2, 13, -131035, 2, 13, -131034, 2, 13, -131033, 2, 13, -65497, 2, 13, 39, 2, 13, 65575, 2, 13, 131111, 2, 13, 196647, 2, 13, 262182, 2, 13, 196646, 2, 13, 131110, 2, 13, 65574, 2, 13, 196645, 2, 13, 131109, 2, 13, 65573, 2, 13, 262181, 2, 13, 327718, 2, 13, 38, 2, 13, 37, 2, 13, -65499, 2, 13, -65498, 2, 13)

[node name="enemies" type="Node2D" parent="."]

[node name="Goblin1" parent="enemies" instance=ExtResource("5_jw2wa")]
position = Vector2(330, 310)

[node name="Goblin2" parent="enemies" instance=ExtResource("5_jw2wa")]
position = Vector2(165, 310)

[node name="Goblin3" parent="enemies" instance=ExtResource("5_jw2wa")]
position = Vector2(690, 885)

[node name="Slime test" parent="enemies" instance=ExtResource("4_jfy54")]
position = Vector2(1060, 662)

[node name="door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2(74, 314.5)
shape = SubResource("RectangleShape2D_4l0x8")

[node name="how_to_move_text" type="Sprite2D" parent="."]
position = Vector2(170, 835.5)
scale = Vector2(3.2, 3.2)
texture = ExtResource("6_ux0dt")

[node name="Label" type="Label" parent="how_to_move_text"]
anchors_preset = -1
anchor_right = 1.73333
anchor_bottom = 1.6383
offset_left = -37.0
offset_top = -38.0
offset_right = 37.0
offset_bottom = 37.0
scale = Vector2(0.33, 0.33)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_wyvh3")
theme_override_font_sizes/font_size = 30
text = "Use WASD to move and SPACE to attack"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="goblins_text" type="Sprite2D" parent="."]
position = Vector2(692, 561)
scale = Vector2(3, 3)
texture = SubResource("CompressedTexture2D_0xn0s")

[node name="Label" type="Label" parent="goblins_text"]
anchors_preset = -1
anchor_left = 0.00740776
anchor_top = 0.00354576
anchor_right = 1.86296
anchor_bottom = 1.58865
offset_left = -41.3334
offset_top = -39.3333
offset_right = 34.6666
offset_bottom = 34.6667
scale = Vector2(0.33, 0.33)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_wyvh3")
theme_override_font_sizes/font_size = 30
text = "Goblins:
HP: 3
Damage: 1
GoldDrop: 5"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="door" to="." method="_on_door_body_entered"]
